# Papoi_real_robot

./: README_ARCHITECTURE.md
puzzlebot_description/urdf/: puzzlebot.urdf.xacro
puzzlebot_final/: CMakeLists.txt  package.xml  setup.cfg  setup.py
puzzlebot_final/launch/: puzzlebot_aruco.launch.xml
puzzlebot_final/launch_JP/: mc3.launch.py  mc4.launch.py  mc5_master.launch.py  multi_robot.launch.py  puzzlebot.launch.py  spawn_robot.launch.py
puzzlebot_final/launch_LAP/: Final_Challenge.launch.py.old  final_challenge.launch.py
puzzlebot_final/puzzlebot_final/: __init__.py  aruco_detection_monitor.py  aruco_monitor.py  bug0_node.py  bug2_node.py  ekf_node.py  joint_state_publisher.py  localisation_node.py  waypoint_manager.py
puzzlebot_final/resource/: puzzlebot_final
puzzlebot_final/rviz/: FinalChallenge.rviz
puzzlebot_final/scripts_JP/: Minichallenge1.py  arucostatus.py  bug0_FC_node.py  bug0_node.py  bug2_FC_node.py  bug2_node.py  control_node.py  ekf_physical_node.py  localisation_node.py  puzzlebot_sim_node.py  trajectory_node.py  varianza.py
